--- a/common/src/main/resources/assets/ninjaphenix_container_lib/lang/en_us.json
+++ b/common/src/main/resources/assets/ninjaphenix_container_lib/lang/en_us.json
@@ -9,6 +9,7 @@
   "screen.ninjaphenix_container_lib.page_x_y": "%d/%d",
   "screen.ninjaphenix_container_lib.off_screen_warning_1": "Part of the screen may not be visible",
   "screen.ninjaphenix_container_lib.off_screen_warning_2": " if you pick this option.",
+  "screen.ninjaphenix_container_lib.current_option_notice": "This is your current preference.",
   "container.ninjaphenix_container_lib.generic_double": "Large %s",
   "key.expandedstorage.config": "[NCL] Open Screen Select"
 }
