Alter tests to contain more inventory sizes, expose adding screen types to api, sort out internal api package. Fix screen size for single 216 size inventory.

--- a/fabric/src/test/resources/assets/test/lang/en_us.json
+++ b/fabric/src/test/resources/assets/test/lang/en_us.json
@@ -4,5 +4,10 @@
   "block.test.block54": "Inventory 54",
   "block.test.block81": "Inventory 81",
   "block.test.block108": "Inventory 108",
-  "block.test.block135": "Inventory 135"
+  "block.test.block135": "Inventory 135",
+  "block.test.block162": "Inventory 162",
+  "block.test.block189": "Inventory 189",
+  "block.test.block216": "Inventory 216",
+  "block.test.block243": "Inventory 243",
+  "block.test.block270": "Inventory 270"
 }
